<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF00"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/team_a"
                android:textColor="#616161"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="50sp" />

            <Button
                android:id="@+id/add_try_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addTryTeamA"
                android:text="@string/btn_try" />

            <Button
                android:id="@+id/add_try_conversion_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addTryConversionTeamA"
                android:text="@string/btn_try_conversion" />

            <Button
                android:id="@+id/penalty_goal_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addPenaltyGoalTeamA"
                android:text="@string/btn_penalty" />

            <Button
                android:id="@+id/field_goal_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addFieldGoalTeamA"
                android:text="@string/btn_field" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/team_b"
                android:textColor="#616161"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/score"
                android:textColor="#000000"
                android:textSize="50sp" />

            <Button
                android:id="@+id/add_try_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addTryTeamB"
                android:text="@string/btn_try" />

            <Button
                android:id="@+id/add_try_conversion_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addTryConversionTeamB"
                android:text="@string/btn_try_conversion" />

            <Button
                android:id="@+id/penalty_goal_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addPenaltyGoalTeamB"
                android:text="@string/btn_penalty" />

            <Button
                android:id="@+id/field_goal_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:onClick="addFieldGoalTeamB"
                android:text="@string/btn_field" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:gravity="center_horizontal"
        android:text="@string/points_breakdown"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/try_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="160dp"
        android:layout_marginLeft="16dp"
        android:text="@string/pb_1"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/try_conversion_Text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="140dp"
        android:layout_marginLeft="16dp"
        android:text="@string/pb_2"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/penalty_goal_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:layout_marginLeft="16dp"
        android:text="@string/pb_3"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/field_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="16dp"
        android:text="@string/pb_4"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="resetScore"
        android:padding="8dp"
        android:text="@string/btn_reset" />
</RelativeLayout>